infra/k8s/routing/middleware-redirect-default-domain.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-default-domain
  namespace: tomsblog
spec:
  redirectRegex:
    regex: "^https?://.*"
    replacement: "https://blog.tomirgang.de"
    permanent: false
