infra/k8s/routing/ingressroute-default-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redirect-unknown-domains
  namespace: tomsblog
spec:
  entryPoints:
    - websecure
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      priority: 1
      middlewares:
        - name: redirect-default-domain
      services:
        - kind: TraefikService
          name: noop@internal
  tls: {}
