infra/k8s/routing/ingressroute-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redirect-http-to-https
  namespace: tomsblog
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      priority: 1
      middlewares:
        - name: redirect-https
      services:
        - kind: TraefikService
          name: noop@internal
